# v-dotnet-runtime

./: .gitignore  .gitmodules  readme.md
module/: .editorconfig  v-dotnet-module.sln
module/YAMP.Example/: Main.cs  YAMP.Example.csproj
module/YAMP.Host.Server/: Host.cs  YAMP.Host.Server.csproj
module/YAMP.Host.Server/Handler/: ExceptionHandler.cs
module/YAMP.Shared/: YAMP.Shared.csproj
module/YAMP.Shared/Attributes/: CoreEventAttribute.cs
module/YAMP.Shared/Core/: ServerLibrary.cs  SharedLibrary.cs  YampResource.cs
module/YAMP.Shared/Enums/: CType.cs  CoreEventType.cs  LogLevel.cs
module/YAMP.Shared/Implementations/: CArgParser.cs  RegisteredCoreEvent.cs  Resource.cs
module/YAMP.Shared/Interfaces/: IResource.cs
module/YAMP.Shared/Services/: AttributeService.cs  ConversionService.cs  EventService.cs  ResourceService.cs
module/YAMP.Shared/Structs/: CAnyArray.cs  CAnyValue.cs  CArray.cs  CDict.cs  SdkInterface.cs  SdkResource.cs
module/YAMP.Shared/Writers/: InterceptWriter.cs
module/YAMP.Wrapper/: EntryPoint.cs  YAMP.Wrapper.csproj
module/YAMP.Wrapper/Core/: Yamp.cs
module/YAMP.Wrapper/Tasks/: TickSynchronizationContext.cs  TickTaskScheduler.cs
module/YAMP.Wrapper/Writers/: InterceptWriter.cs
runtime/: CMakeLists.txt
runtime/client/: CMakeLists.txt
runtime/server/: CMakeLists.txt
runtime/server/src/: main.cpp  runtime.cpp
runtime/server/src/core/: net_host.cpp  net_host.h  net_host_library.cpp  net_host_library.h  runtime.cpp  runtime.h
runtime/src/: main.cpp  netRuntimeHost.cpp  netRuntimeHost.h  runtime.cpp  runtime.h
runtime/src/utils/: logger.h
runtime/vendors/yamp-sdk/: CMakeLists.txt
runtime/vendors/yamp-sdk/include/yamp-sdk/: sdk.h  sdk_common.h  sdk_context.h  sdk_interface.h
runtime/vendors/yamp-sdk/include/yamp-sdk/game/: sdk_entity.h  sdk_events.h  sdk_natives.h  sdk_player.h
runtime/vendors/yamp-sdk/include/yamp-sdk/misc/: sdk_any_value.h  sdk_resource.h
tools/: build.bat
